# icp_localization

./: README.md
src/: CMakeLists.txt  README.md  package.xml
src/launch/: localization.launch
src/rviz_cfg/: localization.rviz
src/scripts/: global_localization.py  publish_initial_pose.py  transform_fusion.py
src/src/: merge.cpp  publish_scan.cpp
